--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     const oldListElement = listElement.innerHTML;
     listElement.innerHTML = oldListElement + nameInputElement.value + " : " + textInputElement.value;
   });
+  //как ставить переменные в тексте
 </script>
 
 </html>
